=== HEAD

* Add Database#compute_stats

* Add Database#values

* Add Database#refresh

* Add Database#invalidate_search_path

* Change types of integer/biginteger to int/bigint

* Enable keepalive on connection to database

=== 1.0.1 (2016-09-20)

* Fix disconnect detection in impala and rbhive adapters (jeremyevans)

* Make implicit qualify return an SQL::Identifier if given an unqualified string (jeremyevans)

* Fix :search_path option handling when using Sequel::SQL::AliasedExpressions (jeremyevans)

* Speed up multi_insert and import (jeremyevans)

* Add rbhive adapter (jeremyevans)

* Add :empty_null=>:ruby option to csv_to_parquet extension, which can support quoted CSV cells (jeremyevans)

* Optimize csv_to_parquet extension by not spawning shells or unnecessary processes (jeremyevans)

* Transfer ownership of gem over to Outcomes Insights (aguynamedryan)

=== 1.0.0 (2015-12-04)

* Initial Public Release